fixing bug on mobile with inline-svgs

--- a/assets/post.scss
+++ b/assets/post.scss
@@ -84,6 +84,15 @@ $very-soft-gray: #e8e8e8;
   & li:last-child svg {
     padding-right: 5px;
   }
+  & li span {
+    margin: 3px;
+  }
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
 }
 
 .prototype {
